nav and homepage

--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
 
         <ek-navigation layout="column"></ek-navigation>
 
-        <md-content ui-view layout="column" flex layout-padding></md-content>
+        <md-content ui-view layout="column" flex layout-padding layout-align="center"></md-content>
 
     </div>
 
